@@ -11,6 +11,7 @@
 @include-section["zip.scrbl"]
 @include-section["tar.scrbl"]
 @include-section["untar.scrbl"]
+@include-section["untgz.scrbl"]
 @include-section["md5.scrbl"]
 @include-section["sha1.scrbl"]
 @include-section["gif.scrbl"]
