@@ -1,5 +1,6 @@
 Version 5.3.1.8
 file/untar: added
+file/untgz: added
 
 Version 5.3.1.7
 compiler/zo-structs: generalize flonum? field to type
